try to fix padding issue on posts for small displays, attempt to fix pagination from collapsing on smaller displays

--- a/_sass/_pagination.sass
+++ b/_sass/_pagination.sass
@@ -3,6 +3,8 @@
   padding: 1rem
   font-size: 3rem
   font-weight: 300
+  display: inline-table
+  width: 100%
   color: $footer-background
   svg
     fill: $brand
