--- a/_sass/_socials.sass
+++ b/_sass/_socials.sass
@@ -88,7 +88,7 @@
 @media (max-width: 400px)
 	.socials
 		svg
-			@include size(3rem)
+			@include size(2rem)
 
 @media (max-width: 350px)
 	.about
